# doc-to-img-cv

./: .gitmodules  CMakeLists.txt  README.md
src/cxx/itdcv/win/: main.cpp  main.hpp
